<resources>
    <string name="app_name">Keep Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <!--    <string name="delete_note">Delete Note</string>-->
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="home">Home</string>
    <string name="create_new_note">Create New Note</string>
    <string name="settings">Settings</string>
    <string name="help_and_contact">Help and Contact</string>
    <string name="about_us">About Us</string>
    <string name="quick_tour">Quick Tour</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="share">Share</string>
    <string name="keep_your_important_notes_with_you">Keep your important notes with you!</string>

    <string name="navigration_open">Open Navigation drawer</string>
    <string name="navigration_close">Close Navigation drawer</string>
    <string name="share_app_via">Share App Via.</string>
    <string name="select_an_option_to_share_application">Select an option to share application.</string>
    <string name="share_apk">Share APK</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="app_desc">Keep Private Notes keep your notes up to date. you can customize and prioritise your notes by adding colors to them, it also support the feature to add URL and quick access those URL\'s also one can save image along with note for extra support.</string>
    <string name="about_developer">About Developer</string>
    <string name="developer_desc">Omkar Varma\nB.Tech Electronics and Communication\n</string>
    <string name="email_me">Email ME</string>
    <string name="contact_us">Contact Me</string>
    <string name="connect_on_linkedin">Connect on LinkedIn</string>
    <string name="follow_on_instagram">Follow on Instagram</string>
    <string name="connect_on_git">Connect on GIT</string>
    <string name="problem_about">Problem About</string>
    <string name="send">send</string>
    <string name="submit">Submit</string>
    <string name="feedmsg">Enter your feedback here.. !!</string>
    <string name="describe_problem_hint_text">Describe your problem here.. !!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="tag_line">All your notes at one place.</string>
</resources>