<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item android:id="@+id/navigationDrawer_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item android:id="@+id/navigationDrawer_AddNote"
            android:icon="@drawable/ic_add_note_icon"
            android:title="@string/create_new_note"/>

        <item android:id="@+id/navigationDrawer_QuickIntro"
            android:icon="@drawable/ic_quick_introduction"
            android:title="@string/quick_tour"/>

    </group>



        <item android:title="@string/help_and_contact"
            >

            <menu>
                <group android:checkableBehavior="single">
                <item android:id="@+id/navigationDrawer_Help_Feedback"
                    android:icon="@drawable/ic_help_and_feedback"
                    android:title="@string/help_and_feedback"/>

                <item android:id="@+id/navigationDrawer_AboutUs"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/about_us"/>

                </group>
            </menu>


        </item>





        <item android:title="Share Menu"
            >

            <menu>
                <group android:checkableBehavior="single">
                <item android:id="@+id/navigationDrawer_Share"
                    android:icon="@drawable/ic_share_icon"
                    android:title="@string/share"/>

                <item android:id="@+id/navigationDrawer_RateUs"
                    android:icon="@drawable/ic_rate"
                    android:title="Rate Us"/>

                </group>
            </menu>


        </item>



</menu>