<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prim"
    tools:context=".activities.AboutUsActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/prim"
        tools:context=".activities.AboutUsActivity">

        <ImageView
            android:id="@+id/imageBackAboutUs"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/aboutUsAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/_28sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imageBackAboutUs"
            />

        <ImageView
            android:id="@+id/imageAppIcon"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/note_on_boarding_screen_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutUsAppName" />

        <TextView
            android:id="@+id/aboutVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_1_0"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/imageAppIcon"
            />

        <TextView
            android:id="@+id/aboutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textSize="@dimen/_16sdp"
            android:textAlignment="center"
            android:fontFamily="@font/ubuntu"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/aboutVersion"
            />


        <TextView
            android:id="@+id/aboutDeveloper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_developer"
            android:textSize="@dimen/_22sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/aboutDescription"
            />

        <TextView
            android:id="@+id/aboutDeveloperDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_desc"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/aboutDeveloper"
            />

        <TextView
            android:id="@+id/aboutContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/aboutDeveloperDesc"
            />

        <Button
            android:id="@+id/aboutEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_me"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/aboutContact"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_gmail_icon"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingBottom="@dimen/_10sdp"
            />

        <Button
            android:id="@+id/followMeOnLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_on_linkedin"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/aboutEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_linkedin"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingBottom="@dimen/_10sdp"
            />

        <Button
            android:id="@+id/followMeOnInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow_on_instagram"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/followMeOnLinkedIn"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_instagram"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingBottom="@dimen/_10sdp"
            />

        <Button
            android:id="@+id/followMeOnGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_on_git"
            android:background="@color/transparent"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            app:layout_constraintTop_toBottomOf="@+id/followMeOnInstagram"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_github"
            android:drawableTint="@color/colorAccent"
            app:drawableTint="@color/colorAccent"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingBottom="@dimen/_10sdp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
