<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prim"
    tools:context=".activities.HelpFeedbackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/prim"
        tools:context=".activities.HelpFeedbackActivity">

        <ImageView
            android:id="@+id/imageBackHelpFeedback"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/HelpandFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_and_feedback"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_24sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageBackHelpFeedback"
            />

        <EditText
            android:id="@+id/inputProblem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@null"
            android:hint="@string/problem_about"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/colorNoteSubtitleText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HelpandFeedback"
            />

        <EditText
            android:id="@+id/inputproblemDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu"
            android:gravity="top"
            android:hint="@string/describe_problem_hint_text"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_80sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputProblem" />

        <Button
            android:id="@+id/problemSendProblem"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/drawer_selected_item_background"
            app:background="@drawable/drawer_selected_item_background"
            android:drawableLeft="@drawable/ic_send"
            android:drawableTint="@color/black"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center|bottom"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/send"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableTint="@color/black"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputproblemDesc"
            tools:ignore="RtlHardcoded,UnusedAttribute" />


        <TextView
            android:id="@+id/feedbackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/problemSendProblem"
            />

        <EditText
            android:id="@+id/inputfeedbacktext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu"
            android:gravity="top"
            android:hint="@string/feedmsg"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minHeight="@dimen/_80sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feedbackText" />

        <Button
            android:id="@+id/problemSendFeedbackBtn"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:paddingBottom="@dimen/_10sdp"
            android:text="@string/submit"
            android:textStyle="bold"
            android:gravity="center|bottom"
            android:background="@drawable/drawer_selected_item_background"
            app:background="@drawable/drawer_selected_item_background"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_feedback"
            android:drawableTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputfeedbacktext"
            tools:ignore="RtlHardcoded,UnusedAttribute" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
