<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prim"
    tools:context=".activities.MainActivity"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:background="@color/colorIcons"
        app:headerLayout="@layout/navigation_drawer_header_file"
        app:menu="@menu/navigation_drawer_menu"
        android:layout_gravity="start"
        android:theme="@style/navigationTheme"
        />

    <!--        app:itemBackground="@drawable/drawer_selected_item_background"-->
    <!--        app:itemIconTint="@color/colorIcons"-->
    <!--        app:itemTextColor="@drawable/nav_drawer_text_color"-->
<!--    app:itemBackground="@drawable/drawer_selected_item_background"-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/prim"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/textMyNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/my_notes"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/textMyNotes">

            <ImageView
                android:id="@+id/menuImage"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="@color/searchIcon" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/search_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
            app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

        <LinearLayout
            android:id="@+id/layoutQuickActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorQuickActionBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/imageAddNotes"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add_outline"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageAddImage"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_image"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageAddWebLink"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_web_link"
                app:tint="@color/colorIcons" />



        </LinearLayout>

        <ImageView
            android:id="@+id/imageAddNotesMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_add"
            app:tint="@color/prim"
            app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
